# BlackHoleGPU

./: CHANGELOG.md  CHANGELOG_V2.md  CMakeLists.txt  COLOR_MAP_IMPLEMENTATION.md  COLOR_MAP_REFERENCE.txt  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  FEATURES_V2.md  LICENSE  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md
docs/: BlackHoleGPU_Technical_Report.tex
shaders/: BlackHole.metal  BlackHole_Exact.metal  BlackHole_Scientific.metal  BlackHole_clean.metal  ParticleSystem.metal  bloom_brightness.metal  metal_shader_list.txt
src/: Renderer.hpp  Renderer.mm  ShaderTypes.h  main.cpp
